WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204656
[LFC][IFC] Fix LineLayoutContext::shouldProcessUncommittedContent logic
https://bugs.webkit.org/show_bug.cgi?id=204656
Summary
[LFC][IFC] Fix LineLayoutContext::shouldProcessUncommittedContent logic
alan
Reported
2019-11-27 16:36:50 PST
text checking is wrong
Attachments
Patch
(2.54 KB, patch)
2019-11-27 16:45 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-11-27 16:37:16 PST
<
rdar://problem/57511221
>
alan
Comment 2
2019-11-27 16:45:04 PST
Created
attachment 384429
[details]
Patch
WebKit Commit Bot
Comment 3
2019-11-28 06:24:08 PST
Comment on
attachment 384429
[details]
Patch Clearing flags on attachment: 384429 Committed
r252921
: <
https://trac.webkit.org/changeset/252921
>
WebKit Commit Bot
Comment 4
2019-11-28 06:24:10 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug