[LFC][IFC] Fix LineLayoutContext::shouldProcessUncommittedContent logic https://bugs.webkit.org/show_bug.cgi?id=204656 <rdar://problem/57511221>

Reviewed by Antti Koivisto.

Move the [text][text] and [ ][text] checks further down because we adjust the "lastUncomittedContent" by skipping [container start][container end] items.
(This was recently regressed at r252859)

* layout/inlineformatting/LineLayoutContext.cpp:
(WebCore::Layout::LineLayoutContext::shouldProcessUncommittedContent const):


Canonical link: https://commits.webkit.org/217894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252921 268f45cc-cd09-0410-ab3c-d52691b4dbfc